# py_asm

./: .gitlab-ci.yml  README.md  ci.sh  main.py  pyproject.toml  trace.sh
core/: config.py  exceptions.py  file_helper.py  instructions.py  io.py  isa.py  model.py  preprocessing.py  processor.py  registers.py  translator.py  util.py
core/machine/: __init__.py  alu.py  arithmetic.py  clock.py  computer.py  config.py  instruction_controller.py  instructions.py  io.py  io_controller.py  memory.py  memory_controller.py  processor.py  register_controller.py  registers.py
core/translator/: __init__.py  preprocessing.py  translator.py  util.py
docs/: instructions.md
examples/: cat.pyasm  lib.inc  lib.inc.min  prob5.pyasm  program.asm  program.asm.p
test/: test_alu.py  test_instructions.py  test_preprocessing.py  test_pyasm.py  test_translator.py
test/examples/: cat.pyasm  cisc.pyasm  hello.pyasm  prob5.pyasm
