[tool.poetry]
name = "py-asm"
version = "0.1.0"
description = ""
authors = ["Alexander Kharlamov <wignorbo@yandex.ru>"]
readme = "README.md"
packages = [{include = "py_asm"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
pylint = "^2.15.7"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
